--- a/TractorSpecs/app/make/make.html
+++ b/TractorSpecs/app/make/make.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="index.html">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;about us</div>
+                    <div class="breadcrumbs1_inner"><a href="#/home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;manufacturer</div>
                 </div>
             </div>
         </div>
@@ -150,9 +150,9 @@
         <div class="row">
             <div class="span9">
 
-                <h1>Who we are</h1>
+                <h1>{{ vm.make.mfgName }}</h1>
 
-                <h3>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Ipsum dolor sit amet conse ctetur adipisicing elit.</h3>
+                <h3><!--Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Ipsum dolor sit amet conse ctetur adipisicing elit.--></h3>
 
                 <div class="thumb1">
                     <div class="thumbnail clearfix">
