- Enabled HTML5 mode for push state.

--- a/TractorSpecs/app/equipment-class/equipment-class.html
+++ b/TractorSpecs/app/equipment-class/equipment-class.html
@@ -269,7 +269,7 @@
                 <p>
                     Our website is a collection of information about farm and construction equipment. Primarily tractors, but we encompass a bit of everything. Our goal is to collect specification data, pictures, prices and any documents for each machine.
                 </p>
-                <p><a href="#/about" class="button2">Read More</a></p>
+                <p><a href="/about" class="button2">Read More</a></p>
                 <br>
 
                 <h2>Where does the information come from?</h2>
@@ -277,7 +277,7 @@
                 <p>
                     Nothing you find on our website is unique, we're simply an agragation of owner reports, manuals, print, and product bochures. Some of what you'll find here has been collected by our staff, other data has been submited by equipment owners and enthusists. We do not promise 100% accuracy, however we do our best.
                 </p>
-                <p><a href="#/about" class="button2">Read More</a></p>
+                <p><a href="/about" class="button2">Read More</a></p>
                 <br>
 
                 <h2>Can we use your data?</h2>
@@ -285,9 +285,7 @@
                 <p>
                     We offer an web service for used equipment websites and dealers wishing to utilize our database to enhance their equipment listings. Contact us for details on this service.
                 </p>
-                <p><a href="#/about" class="button2">Read More</a></p>
-
-
+                <p><a href="/about" class="button2">Read More</a></p>
 
             </div>
         </div>
