- Added the email contact us feature.  - Edited home page so that equipement class urls work.

--- a/TractorSpecs/app/home/home.html
+++ b/TractorSpecs/app/home/home.html
@@ -409,56 +409,56 @@
                         <ul class="clearfix">
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('FarmTractors')">
                                         <div class="txt2">Farm Tractors</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('LawnTractors')">
                                         <div class="txt2">Lawn Tractors</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('Industrial')">
                                         <div class="txt2">Industrial Tractors</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('TrackTractors')">
                                         <div class="txt2">Tracked Tractors</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('Vintage')">
                                         <div class="txt2">Vintage Tractors</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('CompactTractors')">
                                         <div class="txt2">Compact Tractors</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('Combines')">
                                         <div class="txt2">Combines</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('Forage Harvesters')">
                                         <div class="txt2">Forage Harvesters</div>
                                     </a>
                                 </div>
@@ -508,63 +508,63 @@
                         <ul class="clearfix">
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('RoundBaler')">
                                         <div class="txt2">Round Baler</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('SquareBaler')">
                                         <div class="txt2">Square Baler</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('BigBaler')">
                                         <div class="txt2">Large Square Baler</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('DiscMowers')">
                                         <div class="txt2">Disc Mowers</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('MowerConditioners')">
                                         <div class="txt2">Mower Conditions</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('HayRakes')">
                                         <div class="txt2">Hay Rakes</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('SickleBars')">
                                         <div class="txt2">Sickle Bars</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('HayTedders')">
                                         <div class="txt2">Hay Tedders</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('Blowers')">
                                         <div class="txt2">Forage Blowers</div>
                                     </a>
                                 </div>
@@ -613,35 +613,35 @@
                         <ul class="clearfix">
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('LawnTractors')">
                                         <div class="txt2">Lawn Tractors</div>
                                     </a>
                                 </div>
                             </li>
-                            <li>
+                            <!--<li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('GardenTractors')">
                                         <div class="txt2">Garden Tractors</div>
                                     </a>
                                 </div>
-                            </li>
+                            </li>-->
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('WalkBehindSnowBlowers')">
                                         <div class="txt2">Snow Blowers</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('UtilityVehicles')">
                                         <div class="txt2">Utility Vehicles</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('ATVs')">
                                         <div class="txt2">ATV's</div>
                                     </a>
                                 </div>
@@ -714,46 +714,46 @@
                             </li>                           
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('TrackLoaders')">
                                         <div class="txt2">Track Loaders</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('BackhoeAttachments')">
                                         <div class="txt2">Backhoes</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('WheelLoaders')">
                                         <div class="txt2">Wheel Loaders</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('Telehandlers')">
                                         <div class="txt2">Telehandlers</div>
                                     </a>
                                 </div>
                             </li>
                             <li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('MiniExcavators')">
                                         <div class="txt2">Mini Excavators</div>
                                     </a>
                                 </div>
                             </li>
-                            <li>
+                            <!--<li>
                                 <div class="testimonial1">
-                                    <a href="" data-ng-click="vm.equipmentClassClick('SkidLoaders')">
+                                    <a href="" data-ng-click="vm.equipmentClassClick('crawler')">
                                         <div class="txt2">Crawler</div>
                                     </a>
                                 </div>
-                            </li>
+                            </li>-->
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -797,7 +797,7 @@
     </div>
 </div>
 
-<div id="slider3_wrapper">
+<!--<div id="slider3_wrapper">
     <div class="container">
         <div class="row">
             <div class="span12">
@@ -908,4 +908,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
