--- a/TractorSpecs/app/equipment-class/equipment-class.html
+++ b/TractorSpecs/app/equipment-class/equipment-class.html
@@ -150,16 +150,15 @@
         <div class="row">
             <div class="span9">
 
-                <h1>Who we are</h1>
+                <h1>Equipment Categories</h1>
 
-                <h3>Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Ipsum dolor sit amet conse ctetur adipisicing elit.</h3>
+                <h3>All Equipment Categories Represented On TractorSpecs.</h3>
 
                 <div class="thumb1">
                     <div class="thumbnail clearfix">
                         <figure class="img-polaroid"><img src="Images/img_pro_43.jpg" alt=""></figure>
                         <div class="caption">
                             <p>
-                                All Companies Represented On TractorSpecs
                             </p>
                         </div>
                     </div>
