--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="index.html">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;contacts</div>
+                    <div class="breadcrumbs1_inner"><a href="/home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;edit listing</div>
                 </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputEmail">Description:</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
+                                        <input class="span4" type="text" id="inputEmail" name="email" value="Description:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -231,7 +231,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputName">Enter URL (http://):</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
+                                        <input class="span4" type="text" id="inputName" name="name" value="Enter URL (http://):" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -239,15 +239,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputEmail">Enter Description:</label>
                                     <div class="controls">
-                                        <input class="span4" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="span4">
-                                <div class="control-group">
-                                    <label class="control-label" for="inputPhone">Phone number:</label>
-                                    <div class="controls">
-                                        <input class="span4" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
+                                        <input class="span4" type="text" id="inputEmail" name="email" value="Enter Description:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -258,7 +250,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputName">Dealer/Pricing:</label>
                                     <div class="controls">
-                                        <input class="span3" type="text" id="inputName" name="name" value="Your full name:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputName" name="name" value="Dealer/Pricing:" onblur="if(this.value=='') this.value='Your full name:'" onfocus="if(this.value =='Your full name:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -266,7 +258,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputEmail">Price:</label>
                                     <div class="controls">
-                                        <input class="span3" type="text" id="inputEmail" name="email" value="Your email:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputEmail" name="email" value="Price:" onblur="if(this.value=='') this.value='Your email:'" onfocus="if(this.value =='Your email:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -274,7 +266,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputPhone">Model Year:</label>
                                     <div class="controls">
-                                        <input class="span3" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputPhone" name="phone" value="Model Year:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
@@ -282,7 +274,7 @@
                                 <div class="control-group">
                                     <label class="control-label" for="inputPhone">Notes:</label>
                                     <div class="controls">
-                                        <input class="span3" type="text" id="inputPhone" name="phone" value="Phone number:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
+                                        <input class="span3" type="text" id="inputPhone" name="phone" value="Notes:" onblur="if(this.value=='') this.value='Phone number:'" onfocus="if(this.value =='Phone number:' ) this.value=''">
                                     </div>
                                 </div>
                             </div>
