- Minor tweaks to interface.

--- a/TractorSpecs/app/contact-us/contact-us.html
+++ b/TractorSpecs/app/contact-us/contact-us.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="/home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;contact us</div>
+                    <div class="breadcrumbs1_inner"><a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;contact us</div>
                 </div>
             </div>
         </div>
