--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -1,147 +1,9 @@
-﻿<link rel="stylesheet" href="theme/EcoAgriculture/css/bootstrap.css" type="text/css" media="screen">
-<link rel="stylesheet" href="theme/EcoAgriculture/css/bootstrap-responsive.css" type="text/css" media="screen">
-<link rel="stylesheet" href="theme/EcoAgriculture/css/style.css" type="text/css" media="screen">
-
-<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.js"></script>
-<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="theme/EcoAgriculture/js/superfish.js"></script>
-
-<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.spritely-0.6.1.js"></script>
-
-<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.ui.totop.js"></script>
-
-<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.caroufredsel.js"></script>
-<script type="text/javascript" src="theme/EcoAgriculture/js/jquery.touchSwipe.min.js"></script>
-
-<script type="text/javascript" src="theme/EcoAgriculture/js/script.js"></script>
-<script>
-    $(document).ready(function () {
-        //carufredsel main slider
-        $('#caroufredsel_slider1').carouFredSel({
-            auto: {
-                timeoutDuration: 9000
-            },
-            responsive: true,
-            direction: "left",
-            prev: '.prev1',
-            next: '.next1',
-            width: '100%',
-            scroll: {
-                items: 1,
-                duration: 1000,
-                easing: "easeOutExpo",
-                fx: "fade"
-            },
-            items: {
-                width: '1000',
-                height: 'variable',	//	optionally resize item-height
-                visible: {
-                    min: 1,
-                    max: 1
-                }
-            },
-            mousewheel: false,
-            swipe: {
-                onMouse: true,
-                onTouch: true
-            },
-            pagination: ".pagination1"
-        });
-
-        //	carouFredSel small
-        $('#slider3 .carousel.main ul').carouFredSel({
-            auto: {
-                timeoutDuration: 8000
-            },
-            responsive: true,
-            prev: '.prev3',
-            next: '.next3',
-            width: '100%',
-            scroll: {
-                items: 1,
-                duration: 1000,
-                easing: "easeOutExpo"
-            },
-            items: {
-                width: '350',
-                height: 'variable',	//	optionally resize item-height
-                visible: {
-                    min: 1,
-                    max: 2
-                }
-            },
-            mousewheel: false,
-            swipe: {
-                onMouse: true,
-                onTouch: true
-            }
-        });
-
-        $(window).bind("resize", updateSizes_vat).bind("load", updateSizes_vat);
-        function updateSizes_vat() {
-            $('#caroufredsel_slider1').trigger("updateSizes");
-            $('#slider3 .carousel.main ul').trigger("updateSizes");
-        }
-
-        updateSizes_vat();
-
-        // carufredsel testimonials
-        $('#caroufredsel').carouFredSel({
-            auto: {
-                timeoutDuration: 9000
-            },
-            responsive: true,
-            direction: "left",
-            prev: '.prev_testimonial',
-            next: '.next_testimonial',
-            width: '100%',
-            scroll: {
-                items: 1,
-                duration: 1000,
-                easing: "easeOutExpo",
-                fx: "fade"
-            },
-            items: {
-                width: '1000',
-                height: 'variable',	//	optionally resize item-height
-                visible: {
-                    min: 1,
-                    max: 1
-                }
-            },
-            mousewheel: false,
-            swipe: {
-                onMouse: true,
-                onTouch: true
-            }
-
-
-
-        });
-
-
-
-    }); //
-    $(window).load(function () {
-        //
-
-    }); //
-</script>
-<!--[if lt IE 8]>
-        <div style='text-align:center'><a href="http://www.microsoft.com/windows/internet-explorer/default.aspx?ocid=ie6_countdown_bannercode"><img src="http://www.theie6countdown.com/theme/EcoAgriculture/images/upgrade.jpg"border="0"alt=""/></a></div>
-    <![endif]-->
-<!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <link rel="stylesheet" href="theme/EcoAgriculture/css/ie.css" type="text/css" media="screen">
-<![endif]-->
-<script type="text/javascript" src="theme/EcoAgriculture/js/bootstrap.js"></script>
-
-<div id="content">
+﻿<div id="content">
     <div class="breadcrumbs1">
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="/home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;edit listing</div>
+                    <div class="breadcrumbs1_inner"><a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;edit listing</div>
                 </div>
             </div>
         </div>
@@ -334,7 +196,7 @@
         <div class="row">
             <div class="span12">
                 <div class="shadow1_inner">
-                    <img src="theme/EcoAgriculture/images/shadow1.png" alt="" class="img">
+                    <img src="theme/EcoAgriculture/images/shadow1.png" alt="shadow" class="img">
                 </div>
             </div>
         </div>
