- Added the breakdown of a model in the makes page by equipment type.  - Fixed view bug that was causing the buttons of models to be offcenter.

--- a/TractorSpecs/app/make/make.html
+++ b/TractorSpecs/app/make/make.html
@@ -31,21 +31,19 @@
                 <h2>MODELS</h2>
 
                 <div class="row">
-                    <div class="makeColumns">
-                        <div class="span2">
-                            <div data-ng-repeat="model in vm.models">
+                        <div data-ng-repeat="model in vm.models">
+                            <div class="span3">
                                 <div class="thumb2">
                                     <div class="thumbnail clearfix">
                                         <a href="" data-ng-click="vm.modelClick(model.modelUrl)" title="{{ model.modelNumber }}">
                                             <figure><img src="theme/EcoAgriculture/images/about06.png" alt="Binoculars"></figure>
                                             <div class="caption">
-                                                <div class="txt1">{{ model.modelNumber }}</div>
+                                                <div class="txt1">{{ model.modelNumber.trim() }}</div>
                                                 <!--<div class="txt2">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt.</div>-->
                                             </div>
                                         </a>
                                     </div>
                                 </div>
-                            </div>
                             </div>
                         </div>
                         <!--<div class="span4 offset1">
@@ -125,6 +123,13 @@
 
             </div>
             <div class="span3">
+                <h2>{{ vm.make.mfgName }} Equip Types </h2>
+
+                <p data-ng-repeat="equipmentClass in vm.equipmentClasses">
+                    <a href="/mfg/{{ vm.mfgURL }}/{{ equipmentClass.classURL }}" title="{{ vm.make.mfgName }} {{ equipmentClass.className }}">{{ equipmentClass.className }}</a>
+                </p>
+                <p><a href="/categories" class="button2" title="Categories">Read More</a></p>
+                <br>
 
                 <h2>What is TractorSpecs.com?</h2>
 
