--- a/TractorSpecs/app/search/search.html
+++ b/TractorSpecs/app/search/search.html
@@ -70,7 +70,7 @@
                             <div data-ng-repeat="model in vm.models">
                                 <div class="thumb2">
                                     <div class="thumbnail clearfix">
-                                        <a href="" data-ng-click="vm.modelClick(model.modelUrl)" title="{{ model.modelNumber }}">
+                                        <a href="" data-ng-click="vm.modelClick(model)" title="{{ model.modelNumber }}">
                                             <figure><img src="theme/EcoAgriculture/images/about06.png" alt="Binoculars"></figure>
                                             <div class="caption">
                                                 <div class="txt1">{{ model.modelNumber }}</div>
