- Add information to the make equipment class.

--- a/TractorSpecs/app/make/make.html
+++ b/TractorSpecs/app/make/make.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="span9">
 
-                <h1>{{ vm.make.mfgName }}</h1>
+                <h1>{{ vm.make.mfgName }} {{ vm.models[0].equipmentClass.className }}</h1>
 
                 <h3><!--Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Ipsum dolor sit amet conse ctetur adipisicing elit.--></h3>
 
