--- a/TractorSpecs/app/home/home.html
+++ b/TractorSpecs/app/home/home.html
@@ -202,7 +202,7 @@
         <div class="row">
             <div class="span12">
                 <div class="shadow1_inner">
-                    <img src="theme/EcoAgriculture/images/shadow1.png" alt="" class="img">
+                    <img src="theme/EcoAgriculture/images/shadow1.png" alt="shadow image" class="img">
                 </div>
             </div>
         </div>
@@ -280,7 +280,7 @@
             </div>-->
             <div class="span4 banner banner4">
                 <div class="banner_inner">
-                    <a href="" title="Just Updated">
+                    <a href="#" title="Just Updated">
                         <div class="txt1">Just<br>Updated</div>
                         <div class="">
                             <ul class="clearfix" style="list-style: none;columns: 2;-webkit-columns: 2;-moz-columns: 2;">
