- Added loading bar.  - Fix alt text for poloroid image of the make to properly incude the make name.

--- a/TractorSpecs/app/make/make.html
+++ b/TractorSpecs/app/make/make.html
@@ -18,7 +18,7 @@
 
                 <div class="thumb1">
                     <div class="thumbnail clearfix">
-                        <figure class="img-polaroid"><img src="theme/TractorSpecs_Original/images/{{ vm.make.mfgLogoImg }}" alt="{{ vm.make.modelNumber }}"></figure>
+                        <figure class="img-polaroid"><img src="theme/TractorSpecs_Original/images/{{ vm.make.mfgLogoImg }}" alt="{{ vm.make.mfgName }}"></figure>
                         <div class="caption">
                             <p>
                                 {{ vm.make.mfgDesc }}
