- Corrected bread crumbs.

--- a/TractorSpecs/app/equipment-class/equipment-class.html
+++ b/TractorSpecs/app/equipment-class/equipment-class.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="/"  title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;about us</div>
+                    <div class="breadcrumbs1_inner"><a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;<a href="/categories" title="Home">categories</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;{{ vm.equipmentClass.className }}</div>
                 </div>
             </div>
         </div>
