--- a/TractorSpecs/app/model/model.html
+++ b/TractorSpecs/app/model/model.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;services</div>
+                    <div class="breadcrumbs1_inner"><a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;<a href="/allmakes" title="All Manufacturers">manufacturers</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;<a href="/mfg/{{ vm.model.make.mfgURL }}" title="{{ vm.model.make.mfgName }}">{{ vm.model.make.mfgName }}</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;{{ vm.model.modelNumber }}</div>
                 </div>
             </div>
         </div>
