--- a/TractorSpecs/app/model/update-model.html
+++ b/TractorSpecs/app/model/update-model.html
@@ -3,7 +3,13 @@
         <div class="container">
             <div class="row">
                 <div class="span12">
-                    <div class="breadcrumbs1_inner"><a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;edit listing</div>
+                    <div class="breadcrumbs1_inner">
+                        <a href="/home" title="Home">home page</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;
+                        <a href="/allmakes" title="All Manufacturers">manufacturers</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;
+                        <a href="/mfg/{{ vm.model.make.mfgURL }}" title="{{ vm.model.make.mfgName }}">{{ vm.model.make.mfgName }}</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;
+                        <a href="/specs/{{ vm.model.make.mfgURL }}/{{ vm.model.modelUrl }}" title="{{ vm.model.modelNumber }}">{{ vm.model.modelNumber }}</a>&nbsp;&nbsp;&nbsp;&gt;&nbsp;&nbsp;&nbsp;
+                        Edit Listing for {{ vm.model.make.mfgName }} {{ vm.model.modelNumber }}
+                    </div>
                 </div>
             </div>
         </div>
